Refactored initial commit and introduced Java 25